--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.6.2",
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "lucide-react": "0.511.0",
     "next": "^15.3.2",
     "postcss": "^8.4.31",
     "react": "^19.0.0",
