--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "2.0.5",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
