--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.2",
   "dependencies": {
-    "autoprefixer": "^10.4.16",
-    "lucide-react": "0.511.0",
-    "next": "^15.3.3",
-    "postcss": "^8.4.31",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sonner": "2.0.5",
+    "autoprefixer": "^10.4.22",
+    "lucide-react": "0.555.0",
+    "next": "^16.0.7",
+    "postcss": "^8.5.6",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "sonner": "2.0.7",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "^22.11.18",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "typescript": "^5.8.2"
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@biomejs/biome"
+      "@biomejs/biome",
+      "sharp"
     ]
   }
 }
